fix (Modal): make it unclickable when it is invisible

--- a/packages/grapos/src/General/Modal/Modal.scss
+++ b/packages/grapos/src/General/Modal/Modal.scss
@@ -11,6 +11,10 @@
   background: rgba(0,0,0,.4);
   backdrop-filter: blur(1px);
 
+  &:not(.visible) {
+    pointer-events: none;
+  }
+
   & > .modal-box {
     position: absolute;
     left: 50%;
